infrastructure/kubernetes/meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch-deployment
spec:
  selector:
    matchLabels:
      app: meilisearch-app
  template:
    metadata:
      labels:
        app: meilisearch-app
        dns: dns-service
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:latest
          resources:
            limits:
              memory: "512M"
              cpu: "500m"
          ports:
            - containerPort: 7700
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch-service
spec:
  selector:
    app: meilisearch-app
  ports:
    - port: 7700
