infrastructure/kubernetes/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  selector:
    matchLabels:
      app: products-app
  template:
    metadata:
      labels:
        app: products-app
    spec:
      containers:
        - name: products
          image: physer/microshop-products:main
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products-app
  ports:
    - port: 80
